# tmag5170

./: Cargo.toml  Embed.toml  README.md
examples/: f3discovery.rs
src/: alert_config.rs  device_config.rs  lib.rs  sensor_config.rs  system_config.rs
