[package]
authors = ["Vsevolod Elantsev <13brain13@gmail.com>"]
categories = ["embedded", "hardware-support", "no-std"]
description = "A platform agnostic driver to interface with the TMAG5170-Q1 (3D hall sensor)"
keywords = ["embedded", "embedded-hal-driver", "sensor", "hall_sensor", "angle_meter", "spi"]
license = "MIT OR Apache-2.0"
edition = "2018"
readme = "README.md"
name = "tmag5170"
version = "0.1.0"
repository = "https://github.com/brain113/tmag5170"

[dev-dependencies]
cortex-m = "0.7.2"
cortex-m-rt = "0.6.10"
stm32f3xx-hal = { git = "https://github.com/stm32-rs/stm32f3xx-hal", features = ["stm32f303xc"] }
panic-rtt-target = { version = "0.1", features = ["cortex-m"] }
rtt-target = { version = "0.3.0", features = ["cortex-m"] }

[dependencies]
embedded-hal = "0.2.0"
crc_all = "0.2.0"

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations

[[example]]
name = "f3discovery"